--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -14,6 +14,12 @@
     <script th:src="@{/lib/jui-core/dist/core.min.js}"></script>
     <script th:src="@{/lib/jui/dist/ui.min.js}"></script>
     <script th:src="@{/lib/jui-grid/dist/grid.js}"></script>
+    
+    <style>
+        .button-height {
+            height: auto;
+        }
+    </style>
 </head>
 <body>
     <div id="notice" style="text-align: center">
@@ -22,36 +28,43 @@
             1. 이번 주는 서비스의 안정적 운영을 지켜보기 위하여 베타서비스 입니다.
             <br />
             2. 서비스되는 재고 현황 정보는 데이터 처리 및 전송으로 인해 실제 현장 판매처의
-            현황과 5분~10분 정도의 차이가 있습니다.
+            현황과  <font size="6pt"><b>5분~10분 정도의 차이</b></font>가 있습니다.
             <br />
             3. 일부 약국에서는 번호표 배부 후 판매하는 약국도 있어 서비스되는
             정보가 번호표 배부 현황을 반영하지는 못하고 있습니다.
             <br />
             4. 마스크 현황 정보는 성인용 마스크를 대상으로 합니다.
             <br />
-            5. 마스크 판매정보 수집DB 안정화 등 작업으로 인해 매일 갱신되는
+            5. 마스크 재고 현황은 국민들의 혼돈을 방지하기 위해 4단계 구간 정보로 제공됩니다.  <br /> 
+            - 100개 이상 : 충분 * <font color="greenyellow"> 녹색 </font> <br />
+            - 100개 미만(99개~30개) : 보통 * <font color="yellow"> 노랑색 </font> <br />
+            - 30개 미만(29개~2개) : 부족 * <font color="red"> 빨강색 </font> <br />
+            - 1개~0개 : 없음 또는 판매전 : * <font color="gray">회색 </font>
+            <br />
+            6. 마스크 판매정보 수집DB 안정화 등 작업으로 인해 매일 갱신되는
             정보는 08:00~23:00까지 운영됩니다.
             <br />
-            6. 식약처 공적마스크 구매 안내 :
+            7. 식약처 공적마스크 구매 안내 :
             <a href="http://blog.naver.com/kfdazzang/221839489769">http://blog.naver.com/kfdazzang/221839489769 </a>
             <br />
-            7. 마지막으로 공적 마스크 서비스 시 어려운 환경에서도 일선에서 공헌해 주시는
-            약사님, 우체국 종사자분, 하나로 마트(예정) 분들께도 감사와 응원 드립니다.
+            8. 데이터 출처는 심평원‧정보화진흥원(공공데이터포털)
+            데이터 공개 문의는 한국정보화진흥원 : <a href="maskdata@nia.or.kr">maskdata@nia.or.kr</a>
+            <br />
+            9. 어려운 환경에서도 일선에서 공헌해 주시는 약사님, 우체국 종사자분, 하나로 마트(예정) 분들께도 감사와 응원 드립니다.
         </p>
     </div>
-    <div class="custom-control custom-radio custom-control-inline">
-      <input type="radio" id="customRadioInline1" name="city" class="custom-control-input" value="서울특별시" checked>
-      <label class="custom-control-label" for="customRadioInline1">서울시</label>
-    </div>
-    <div class="custom-control custom-radio custom-control-inline">
-      <input type="radio" id="customRadioInline2" name="city" class="custom-control-input" value="부산광역시">
-      <label class="custom-control-label" for="customRadioInline2">부산시</label>
-    </div>
     
-    <br />
-    <label th:text="마스크내놔"></label>
-    <input type="text" name="address" />
-    <button name="button" onclick="test()">검색</button>
+    <div id="content" style="text-align: center">
+        <button type="button" onclick="sample6_execDaumPostcode()" class="btn btn-info button-height" > 우편번호 찾기 </button><br />
+        <input type="hidden" name="extraAddress" placeholder="참고항목">
+        
+        <br />
+        <div style="margin-bottom: 1rem;">
+            <label th:text="주소"></label>
+            <input type="text" name="address" class="form-control" style="width:50%; display: initial; text-align: center" />
+            <button id="button" onclick="search()" class="btn btn-info button-height" >검색</button>
+        </div>
+    </div>
 
     <div id="table">
         <table id="table_8" class="table classic">
@@ -70,6 +83,7 @@
         </table>
     </div>
     
+    <script src="https://t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js"></script>
     <script id="tpl_row" data-jui="#table_8" data-tpl="row" type="text/template">
         <tr style="cursor: pointer;">
             <td><!= row.index !></td>
@@ -89,19 +103,16 @@
         
         document.querySelector("input[name=address]").addEventListener("keydown", key => {
             if (key.keyCode == 13) {
-                test();
+            	search();
             }
         });
         
-        function test() {
-            var radioVal = $('input[name="city"]:checked').val();
-            
-            let value = radioVal + " " + document.querySelector("input[name=address]").value;
-            
+        function search() {
             let data = {
-                    address : value
+                    address : document.querySelector("input[name=address]").value
+                    , extraAddress : document.querySelector("input[name=extraAddress]").value
             }
-            
+
             $.ajax({
                 type:"GET"
                 , url: "/test"
@@ -145,20 +156,54 @@
                     remain.style.backgroundColor = "gray";
 //                     remain.parentElement.style.backgroundColor = "gray";
                 } else if (remain.innerHTML === "2") {
-                    remain.innerHTML = "<b> 부족 </b>";
+                    remain.innerHTML = "<b> 부족 (29개 ~ 2개) </b>";
                     remain.style.backgroundColor = "red";
 //                     remain.parentElement.style.backgroundColor = "red";
                 } else if (remain.innerHTML === "1") {
-                    remain.innerHTML = "<b> 보통 </b>";
+                    remain.innerHTML = "<b> 보통 (99개 ~ 30개)</b>";
                     remain.style.backgroundColor = "yellow";
 //                     remain.parentElement.style.backgroundColor = "yellow";
                 } else if (remain.innerHTML === "0") {
-                    remain.innerHTML = "<b> 충분 </b>";
+                    remain.innerHTML = "<b> 충분 (100개 이상) </b>";
                     remain.style.backgroundColor = "greenyellow";
 //                     remain.parentElement.style.backgroundColor = "greenyellow";
                 }
             });
         }
+        
+        function sample6_execDaumPostcode() {
+            new daum.Postcode({
+                oncomplete: function(data) {
+                    //사용자가 선택한 주소 타입에 따라 해당 주소 값을 가져온다.
+                    var addr = ''; // 주소 변수
+                    var extraAddr = ''; // 참고항목 변수
+                    if (data.userSelectedType === 'R') { // 사용자가 도로명 주소를 선택했을 경우
+                        addr = data.roadAddress;
+                    } else { // 사용자가 지번 주소를 선택했을 경우(J)
+                        addr = data.jibunAddress;
+                    }
+                    
+                    // 사용자가 선택한 주소가 도로명 타입일때 참고항목을 조합한다.
+                    if(data.userSelectedType === 'R'){
+                        // 법정동명이 있을 경우 추가한다. (법정리는 제외)
+                        // 법정동의 경우 마지막 문자가 "동/로/가"로 끝난다.
+                        if(data.bname !== '' && /[동|로|가]$/g.test(data.bname)){
+                            extraAddr += data.bname;
+                        }
+                        
+                        // 조합된 참고항목을 해당 필드에 넣는다.
+                        document.querySelector("input[name=extraAddress]").value = extraAddr;
+                    
+                    } else {
+                    	document.querySelector("input[name=extraAddress]").value = '';
+                    }
+
+                    // 우편번호와 주소 정보를 해당 필드에 넣는다.
+                    document.querySelector("input[name=address]").value = addr;
+                    search();
+                }
+            }).open();
+           }
         
     </script>
 </body>
