--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -83,7 +83,7 @@
         </table>
     </div>
     
-    <script src="https://t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js"></script>
+    <script src="http://t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js"></script>
     <script id="tpl_row" data-jui="#table_8" data-tpl="row" type="text/template">
         <tr style="cursor: pointer;">
             <td><!= row.index !></td>
@@ -154,19 +154,15 @@
                 if (remain.innerHTML === "3") {
                     remain.innerHTML = "<b> 없음 </b>";
                     remain.style.backgroundColor = "gray";
-//                     remain.parentElement.style.backgroundColor = "gray";
                 } else if (remain.innerHTML === "2") {
                     remain.innerHTML = "<b> 부족 (29개 ~ 2개) </b>";
                     remain.style.backgroundColor = "red";
-//                     remain.parentElement.style.backgroundColor = "red";
                 } else if (remain.innerHTML === "1") {
                     remain.innerHTML = "<b> 보통 (99개 ~ 30개)</b>";
                     remain.style.backgroundColor = "yellow";
-//                     remain.parentElement.style.backgroundColor = "yellow";
                 } else if (remain.innerHTML === "0") {
                     remain.innerHTML = "<b> 충분 (100개 이상) </b>";
                     remain.style.backgroundColor = "greenyellow";
-//                     remain.parentElement.style.backgroundColor = "greenyellow";
                 }
             });
         }
