--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -83,7 +83,7 @@
         </table>
     </div>
     
-    <script src="http://t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js"></script>
+    <script src="https://t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js"></script>
     <script id="tpl_row" data-jui="#table_8" data-tpl="row" type="text/template">
         <tr style="cursor: pointer;">
             <td><!= row.index !></td>
