--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -110,7 +110,7 @@
 
             $.ajax({
                 type:"GET"
-                , url: "/test"
+                , url: "/stores"
                 , data: data
                 , contentType: "application/json"
                 , dataType : 'JSON'
