--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -58,6 +58,8 @@
         <button type="button" onclick="sample6_execDaumPostcode()" class="btn btn-info button-height" > 우편번호 찾기 </button><br />
         <input type="hidden" name="extraAddress" placeholder="참고항목">
         
+        <div id="map" style="width:500px;height:400px;"></div>
+        
         <br />
         <div style="margin-bottom: 1rem;">
             <label th:text="주소"></label>
@@ -84,6 +86,7 @@
     </div>
     
     <script src="https://t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js"></script>
+    <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=c74ca833673f22749f45b47c2b30152c"></script>
     <script id="tpl_row" data-jui="#table_8" data-tpl="row" type="text/template">
         <tr style="cursor: pointer;">
             <td><!= row.index !></td>
@@ -118,6 +121,7 @@
                 , async: false
                 , success: function(data) {
                     drawGrid(data);
+                    drawMap(data);
                 }
             });
             
@@ -198,6 +202,90 @@
                 }
             }).open();
            }
+        
+        var container = document.getElementById('map'); //지도를 담을 영역의 DOM 레퍼런스
+        var options = { //지도를 생성할 때 필요한 기본 옵션
+            center: new kakao.maps.LatLng(37.6548553, 127.0127817), // 지도의 중심좌표
+//             center: new kakao.maps.LatLng(33.450701, 126.570667), // 지도의 중심좌표
+            level: 3 //지도의 레벨(확대, 축소 정도)
+        };
+    
+        var map = new kakao.maps.Map(container, options); //지도 생성 및 객체 리턴
+        
+        // 지도 확대 축소를 제어할 수 있는  줌 컨트롤을 생성합니다
+        var zoomControl = new kakao.maps.ZoomControl();
+        map.addControl(zoomControl, kakao.maps.ControlPosition.RIGHT);
+        
+        function drawMap(data) {
+        	var positions = [];
+        	for (var i = 0; i < data.length; i++) {
+        		const obj = new Object();
+        		obj.latlng = new kakao.maps.LatLng(data[i].lat, data[i].lng);
+        		
+        		positions.push(obj);
+        	}
+
+//     var positions = [
+//         {
+//             title: '카카오', 
+//             latlng: new kakao.maps.LatLng(37.6548553, 127.0127817)
+//         },
+//         {
+//             title: '생태연못', 
+//             latlng: new kakao.maps.LatLng(37.6629815, 37.6629815)
+//         },
+//         {
+//             title: '텃밭', 
+//             latlng: new kakao.maps.LatLng(37.6576684, 127.0134018)
+//         },
+//         {
+//             title: '근린공원',
+//             latlng: new kakao.maps.LatLng(37.6584383, 127.0135812)
+//         }
+//     ];
+            
+        	var marker = [];
+        	for (var i = 0; i < positions.length; i++) {
+                marker.push(new kakao.maps.Marker({
+                    map: map, // 마커를 표시할 지도
+                    position: positions[i].latlng, // 마커를 표시할 위치
+                }));
+            }
+        	
+//         	var content = '<div class="wrap">' + 
+//             '    <div class="info">' + 
+//             '        <div class="title">' + 
+//             '            카카오 스페이스닷원' + 
+//             '            <div class="close" onclick="closeOverlay(1)" title="닫기"></div>' + 
+//             '        </div>' + 
+//             '        <div class="body">' + 
+//             '            <div class="img">' +
+//             '                <img src="http://cfile181.uf.daum.net/image/250649365602043421936D" width="73" height="70">' +
+//             '           </div>' + 
+//             '            <div class="desc">' + 
+//             '                <div class="ellipsis">제주특별자치도 제주시 첨단로 242</div>' + 
+//             '                <div class="jibun ellipsis">(우) 63309 (지번) 영평동 2181</div>' + 
+//             '                <div><a href="http://www.kakaocorp.com/main" target="_blank" class="link">홈페이지</a></div>' + 
+//             '            </div>' + 
+//             '        </div>' + 
+//             '    </div>' +    
+//             '</div>';
+        	
+//         	var overlay = [];
+//         	for (var i = 0; i < marker.length; i++) {
+//                 overlay.push(new kakao.maps.CustomOverlay({
+//                     content: content,
+//                     map: map,
+//                     position: marker[i].getPosition()
+//                 }));   
+//             }
+        
+//              for (var i = 0; i < marker.length; i++) {
+//                  kakao.maps.event.addListener(marker[i], 'click', function() {
+//                      overlay[i].setMap(map);
+//                  });
+//              }
+        }
         
     </script>
 </body>
