--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -20,6 +20,23 @@
             height: auto;
         }
     </style>
+    
+    <style type="text/css">
+    .wrap {position: absolute;left: 0;bottom: 40px;width: 288px;height: 132px;margin-left: -144px;text-align: left;overflow: hidden;font-size: 12px;font-family: 'Malgun Gothic', dotum, '돋움', sans-serif;line-height: 1.5;}
+    .wrap * {padding: 0;margin: 0;}
+    .wrap .info {width: 286px;height: 120px;border-radius: 5px;border-bottom: 2px solid #ccc;border-right: 1px solid #ccc;overflow: hidden;background: #fff;}
+    .wrap .info:nth-child(1) {border: 0;box-shadow: 0px 1px 2px #888;}
+    .info .title {padding: 5px 0 0 10px;height: 30px;background: #eee;border-bottom: 1px solid #ddd;font-size: 18px;font-weight: bold;}
+    .info .close {position: absolute;top: 10px;right: 10px;color: #888;width: 17px;height: 17px;background: url('http://t1.daumcdn.net/localimg/localimages/07/mapapidoc/overlay_close.png');}
+    .info .close:hover {cursor: pointer;}
+    .info .body {position: relative;overflow: hidden;}
+    .info .desc {position: relative;margin: 13px 0 0 90px;height: 75px;}
+    .desc .ellipsis {overflow: hidden;text-overflow: ellipsis;white-space: nowrap;}
+    .desc .jibun {font-size: 11px;color: #888;margin-top: -2px;}
+    .info .img {position: absolute;top: 6px;left: 5px;width: 73px;height: 71px;border: 1px solid #ddd;color: #888;overflow: hidden;}
+    .info:after {content: '';position: absolute;margin-left: -12px;left: 50%;bottom: 0;width: 22px;height: 12px;background: url('http://t1.daumcdn.net/localimg/localimages/07/mapapidoc/vertex_white.png')}
+    .info .link {color: #5085BB;}
+    </style>
 </head>
 <body>
     <div id="notice" style="text-align: center">
@@ -216,77 +233,73 @@
         var zoomControl = new kakao.maps.ZoomControl();
         map.addControl(zoomControl, kakao.maps.ControlPosition.RIGHT);
         
+        var test = [];
         function drawMap(data) {
-        	var positions = [];
         	for (var i = 0; i < data.length; i++) {
-        		const obj = new Object();
-        		obj.latlng = new kakao.maps.LatLng(data[i].lat, data[i].lng);
-        		
-        		positions.push(obj);
-        	}
-
-//     var positions = [
-//         {
-//             title: '카카오', 
-//             latlng: new kakao.maps.LatLng(37.6548553, 127.0127817)
-//         },
-//         {
-//             title: '생태연못', 
-//             latlng: new kakao.maps.LatLng(37.6629815, 37.6629815)
-//         },
-//         {
-//             title: '텃밭', 
-//             latlng: new kakao.maps.LatLng(37.6576684, 127.0134018)
-//         },
-//         {
-//             title: '근린공원',
-//             latlng: new kakao.maps.LatLng(37.6584383, 127.0135812)
-//         }
-//     ];
-            
-        	var marker = [];
-        	for (var i = 0; i < positions.length; i++) {
-                marker.push(new kakao.maps.Marker({
+        		const marker = new kakao.maps.Marker({
                     map: map, // 마커를 표시할 지도
-                    position: positions[i].latlng, // 마커를 표시할 위치
-                }));
-            }
-        	
-//         	var content = '<div class="wrap">' + 
-//             '    <div class="info">' + 
-//             '        <div class="title">' + 
-//             '            카카오 스페이스닷원' + 
-//             '            <div class="close" onclick="closeOverlay(1)" title="닫기"></div>' + 
-//             '        </div>' + 
-//             '        <div class="body">' + 
-//             '            <div class="img">' +
-//             '                <img src="http://cfile181.uf.daum.net/image/250649365602043421936D" width="73" height="70">' +
-//             '           </div>' + 
-//             '            <div class="desc">' + 
-//             '                <div class="ellipsis">제주특별자치도 제주시 첨단로 242</div>' + 
-//             '                <div class="jibun ellipsis">(우) 63309 (지번) 영평동 2181</div>' + 
-//             '                <div><a href="http://www.kakaocorp.com/main" target="_blank" class="link">홈페이지</a></div>' + 
-//             '            </div>' + 
-//             '        </div>' + 
-//             '    </div>' +    
-//             '</div>';
-        	
-//         	var overlay = [];
-//         	for (var i = 0; i < marker.length; i++) {
-//                 overlay.push(new kakao.maps.CustomOverlay({
-//                     content: content,
-//                     map: map,
-//                     position: marker[i].getPosition()
-//                 }));   
-//             }
-        
-//              for (var i = 0; i < marker.length; i++) {
-//                  kakao.maps.event.addListener(marker[i], 'click', function() {
-//                      overlay[i].setMap(map);
-//                  });
-//              }
+                    position: new kakao.maps.LatLng(data[i].lat, data[i].lng), // 마커를 표시할 위치
+                });
+           
+            	let content = getContent(data[i], i);
+            	
+            	const overlay = new kakao.maps.CustomOverlay({
+                    content: content,
+                    map: map,
+                    position: marker.getPosition()
+                });
+                
+                kakao.maps.event.addListener(marker, 'click', function() {
+                    overlay.setMap(map);
+                });
+                
+                test.push(overlay);
+        	}
         }
         
+        function getContent(data, i) {
+            data.remain_stat = convertRemain(data.remain_stat);
+            
+            var content = '<div class="wrap">' + 
+            '    <div class="info">' + 
+            '        <div class="title">' + 
+            '            ' + data.name + 
+            '            <div class="close" onclick="closeOverlay('+ i +')" title="닫기"></div>' + 
+            '        </div>' + 
+            '        <div class="body">' + 
+            '            <div class="desc">' + 
+            '                <div class="ellipsis">갯수 : ' + data.remain_stat + '</div>' + 
+            '                <div class="ellipsis">거리(Km) : ' + data.distance + '</div>' + 
+            '                <div class="jibun ellipsis">입고 시간 : ' + data.stock_at + '</div>' + 
+            '                <div class="jibun ellipsis">업데이트 시간 : ' + data.created_at + '</div>' + 
+            '            </div>' + 
+            '        </div>' + 
+            '    </div>' +    
+            '</div>';
+                
+            return content;
+        }
+        
+        function convertRemain(remainCount) {
+            if (remainCount == 4) {
+        		remainCount = "<b> <font color='#ffcf00'> 판매중지 </font> </b>";
+        	} else if (remainCount == 3) {
+                remainCount = "<b> <font color='gray'> 없음  </font> </b>";
+            } else if (remainCount == 2) {
+                remainCount = "<b> <font color='red'> 부족 (29개 ~ 2개)  </font> </b>";
+            } else if (remainCount == 1) {
+                remainCount = "<b> <font color='yellow'> 보통 (99개 ~ 30개) </font> </b>";
+            } else if (remainCount == 0) {
+                remainCount = "<b> <font color='greenyellow'> 충분 (100개 이상) </font> </b>";
+            }
+            
+            return remainCount;
+        }
+        
+        // 커스텀 오버레이를 닫기 위해 호출되는 함수입니다 
+        function closeOverlay(i) {
+            test[i].setMap(null);
+        }
     </script>
 </body>
 </html>
