--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -22,9 +22,9 @@
     </style>
     
     <style type="text/css">
-    .wrap {position: absolute;left: 0;bottom: 40px;width: 288px;height: 132px;margin-left: -144px;text-align: left;overflow: hidden;font-size: 12px;font-family: 'Malgun Gothic', dotum, '돋움', sans-serif;line-height: 1.5;}
+    .wrap {position: absolute;left: 0;bottom: 40px;width: 300px;height: 132px;margin-left: -144px;text-align: left;overflow: hidden;font-size: 12px;font-family: 'Malgun Gothic', dotum, '돋움', sans-serif;line-height: 1.5;}
     .wrap * {padding: 0;margin: 0;}
-    .wrap .info {width: 286px;height: 120px;border-radius: 5px;border-bottom: 2px solid #ccc;border-right: 1px solid #ccc;overflow: hidden;background: #fff;}
+    .wrap .info {width: 298px;height: 120px;border-radius: 5px;border-bottom: 2px solid #ccc;border-right: 1px solid #ccc;overflow: hidden;background: #fff;}
     .wrap .info:nth-child(1) {border: 0;box-shadow: 0px 1px 2px #888;}
     .info .title {padding: 5px 0 0 10px;height: 30px;background: #eee;border-bottom: 1px solid #ddd;font-size: 18px;font-weight: bold;}
     .info .close {position: absolute;top: 10px;right: 10px;color: #888;width: 17px;height: 17px;background: url('http://t1.daumcdn.net/localimg/localimages/07/mapapidoc/overlay_close.png');}
@@ -75,15 +75,15 @@
         <button type="button" onclick="sample6_execDaumPostcode()" class="btn btn-info button-height" > 우편번호 찾기 </button><br />
         <input type="hidden" name="extraAddress" placeholder="참고항목">
         
-        <div id="map" style="width:500px;height:400px;"></div>
-        
         <br />
         <div style="margin-bottom: 1rem;">
             <label th:text="주소"></label>
             <input type="text" name="address" class="form-control" style="width:50%; display: initial; text-align: center" />
         </div>
+        
+        <div id="map" style="width:500px; height:400px; margin:0 auto; margin-bottom: 1.25rem"></div>
     </div>
-
+        
     <div id="table">
         <table id="table_8" class="table classic">
             <thead>
@@ -223,7 +223,6 @@
         var container = document.getElementById('map'); //지도를 담을 영역의 DOM 레퍼런스
         var options = { //지도를 생성할 때 필요한 기본 옵션
             center: new kakao.maps.LatLng(37.6548553, 127.0127817), // 지도의 중심좌표
-//             center: new kakao.maps.LatLng(33.450701, 126.570667), // 지도의 중심좌표
             level: 3 //지도의 레벨(확대, 축소 정도)
         };
     
@@ -258,7 +257,7 @@
         }
         
         function getContent(data, i) {
-            data.remain_stat = convertRemain(data.remain_stat);
+            var remain = convertRemain(data.remain_stat);
             
             var content = '<div class="wrap">' + 
             '    <div class="info">' + 
@@ -267,8 +266,11 @@
             '            <div class="close" onclick="closeOverlay('+ i +')" title="닫기"></div>' + 
             '        </div>' + 
             '        <div class="body">' + 
+            '            <div class="img">' +
+            '                <img src="' + remain.get("src") + '" width="73" height="70">' +
+            '           </div>' + 
             '            <div class="desc">' + 
-            '                <div class="ellipsis">갯수 : ' + data.remain_stat + '</div>' + 
+            '                <div class="ellipsis">공적마스크 현황 : ' + remain.get("tag") + '</div>' + 
             '                <div class="ellipsis">거리(Km) : ' + data.distance + '</div>' + 
             '                <div class="jibun ellipsis">입고 시간 : ' + data.stock_at + '</div>' + 
             '                <div class="jibun ellipsis">업데이트 시간 : ' + data.created_at + '</div>' + 
@@ -281,19 +283,25 @@
         }
         
         function convertRemain(remainCount) {
+        	var remain = new Map();
             if (remainCount == 4) {
-        		remainCount = "<b> <font color='#ffcf00'> 판매중지 </font> </b>";
+            	remain.set("tag", "<b> <font color='gray'> 판매중지 </font> </b>");
+            	remain.set("src", "images/stop.png");
         	} else if (remainCount == 3) {
-                remainCount = "<b> <font color='gray'> 없음  </font> </b>";
+        		remain.set("tag", "<b> <font color='gray'> 없음  </font> </b>");
+                remain.set("src", "images/none.png");
             } else if (remainCount == 2) {
-                remainCount = "<b> <font color='red'> 부족 (29개 ~ 2개)  </font> </b>";
+            	remain.set("tag", "<b> <font color='red'> 부족 (29개 ~ 2개)  </font> </b>");
+                remain.set("src", "images/lack.png");
             } else if (remainCount == 1) {
-                remainCount = "<b> <font color='yellow'> 보통 (99개 ~ 30개) </font> </b>";
+            	remain.set("tag", "<b> <font color='#ffcf00'> 보통 (99개 ~ 30개) </font> </b>");
+                remainCount = "<b> <font color='#ffcf00'> 보통 (99개 ~ 30개) </font> </b>";
             } else if (remainCount == 0) {
-                remainCount = "<b> <font color='greenyellow'> 충분 (100개 이상) </font> </b>";
+            	remain.set("tag", "<b> <font color='greenyellow'> 충분 (100개 이상) </font> </b>");
+                remain.set("src", "images/enough.png");
             }
             
-            return remainCount;
+            return remain;
         }
         
         // 커스텀 오버레이를 닫기 위해 호출되는 함수입니다 
