--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -44,8 +44,10 @@
         <p class="lead">
             1. 이번 주는 서비스의 안정적 운영을 지켜보기 위하여 베타서비스 입니다.
             <br />
-            2. 서비스되는 재고 현황 정보는 데이터 처리 및 전송으로 인해 실제 현장 판매처의
-            현황과  <font size="6pt"><b>5분~10분 정도의 차이</b></font>가 있습니다.
+            <font size="5pt"><b> 2. 서비스되는 재고 현황 정보는 데이터 처리 및 전송으로 인해 실제 현장 판매처의
+            현황과 차이가 있습니다. 
+            <br />
+            고생하시는 약사님, 우체국 종사자 분들께 불만과 항의는 자재 해주시기를 간곡히 부탁드립니다.</b></font>
             <br />
             3. 일부 약국에서는 번호표 배부 후 판매하는 약국도 있어 서비스되는
             정보가 번호표 배부 현황을 반영하지는 못하고 있습니다.
@@ -54,7 +56,7 @@
             <br />
             5. 마스크 재고 현황은 국민들의 혼돈을 방지하기 위해 4단계 구간 정보로 제공됩니다.  <br /> 
             - 100개 이상 : 충분 * <font color="greenyellow"> 녹색 </font> <br />
-            - 100개 미만(99개~30개) : 보통 * <font color="yellow"> 노랑색 </font> <br />
+            - 100개 미만(99개~30개) : 보통 * <font color="#ffcf00"> 노랑색 </font> <br />
             - 30개 미만(29개~2개) : 부족 * <font color="red"> 빨강색 </font> <br />
             - 1개~0개 : 없음 또는 판매전 : * <font color="gray">회색 </font>
             <br />
@@ -81,7 +83,7 @@
             <input type="text" name="address" class="form-control" style="width:50%; display: initial; text-align: center" />
         </div>
         
-        <div id="map" style="width:500px; height:400px; margin:0 auto; margin-bottom: 1.25rem"></div>
+        <div id="map" style="width:700px; height:600px; margin:0 auto; margin-bottom: 1.25rem"></div>
     </div>
         
     <div id="table">
@@ -122,7 +124,9 @@
             drawGrid();
         }
         
+        var overlayArray = [];
         function search() {
+        	overlayArray = [];
             let data = {
                     address : document.querySelector("input[name=address]").value
                     , extraAddress : document.querySelector("input[name=extraAddress]").value
@@ -137,12 +141,23 @@
                 , cache: false
                 , async: false
                 , success: function(data) {
+                	setCenter(data);
+                	
+                	data.splice(0, 1);
+                	
                     drawGrid(data);
                     drawMap(data);
                 }
             });
             
             setColor();
+        }
+        
+        function setCenter(data) {
+        	var moveLatLon = new kakao.maps.LatLng(data[0].lat, data[0].lng);
+            
+            // 지도 중심을 이동 시킵니다
+            map.setCenter(moveLatLon);
         }
         
         function drawGrid(data) {
@@ -178,7 +193,7 @@
                     remain.style.backgroundColor = "red";
                 } else if (remain.innerHTML === "1") {
                     remain.innerHTML = "<b> 보통 (99개 ~ 30개)</b>";
-                    remain.style.backgroundColor = "yellow";
+                    remain.style.backgroundColor = "#ffcf00";
                 } else if (remain.innerHTML === "0") {
                     remain.innerHTML = "<b> 충분 (100개 이상) </b>";
                     remain.style.backgroundColor = "greenyellow";
@@ -215,14 +230,16 @@
 
                     // 우편번호와 주소 정보를 해당 필드에 넣는다.
                     document.querySelector("input[name=address]").value = addr;
+                    
                     search();
                 }
             }).open();
+            
            }
         
         var container = document.getElementById('map'); //지도를 담을 영역의 DOM 레퍼런스
         var options = { //지도를 생성할 때 필요한 기본 옵션
-            center: new kakao.maps.LatLng(37.6548553, 127.0127817), // 지도의 중심좌표
+            center: new kakao.maps.LatLng(33.450701, 126.570667), // 지도의 중심좌표
             level: 3 //지도의 레벨(확대, 축소 정도)
         };
     
@@ -232,7 +249,6 @@
         var zoomControl = new kakao.maps.ZoomControl();
         map.addControl(zoomControl, kakao.maps.ControlPosition.RIGHT);
         
-        var test = [];
         function drawMap(data) {
         	for (var i = 0; i < data.length; i++) {
         		const marker = new kakao.maps.Marker({
@@ -252,7 +268,7 @@
                     overlay.setMap(map);
                 });
                 
-                test.push(overlay);
+                overlayArray.push(overlay);
         	}
         }
         
@@ -306,7 +322,7 @@
         
         // 커스텀 오버레이를 닫기 위해 호출되는 함수입니다 
         function closeOverlay(i) {
-            test[i].setMap(null);
+        	overlayArray[i].setMap(null);
         }
     </script>
 </body>
