--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -8,35 +8,15 @@
     <link rel="stylesheet" th:href="@{/lib/jui/dist/ui.min.css}" />
     <link rel="stylesheet" th:href="@{/lib/jui/dist/ui-jennifer.min.css}" />
     <link rel="stylesheet" th:href="@{/lib/jui-grid/dist/grid-jennifer.css}" />
+    <link rel="stylesheet" th:href="@{/css/overlay.css}" />
     <link th:href="@{/webjars/bootstrap/4.4.1/css/bootstrap.min.css}" rel="stylesheet"></link>
     <script th:src="@{/webjars/bootstrap/4.4.1/js/bootstrap.min.js}"></script>
     <script th:src="@{/webjars/jquery/2.1.3/dist/jquery.min.js}"></script>
     <script th:src="@{/lib/jui-core/dist/core.min.js}"></script>
     <script th:src="@{/lib/jui/dist/ui.min.js}"></script>
     <script th:src="@{/lib/jui-grid/dist/grid.js}"></script>
-    
-    <style>
-        .button-height {
-            height: auto;
-        }
-    </style>
-    
-    <style type="text/css">
-    .wrap {position: absolute;left: 0;bottom: 40px;width: 300px;height: 132px;margin-left: -144px;text-align: left;overflow: hidden;font-size: 12px;font-family: 'Malgun Gothic', dotum, '돋움', sans-serif;line-height: 1.5;}
-    .wrap * {padding: 0;margin: 0;}
-    .wrap .info {width: 298px;height: 120px;border-radius: 5px;border-bottom: 2px solid #ccc;border-right: 1px solid #ccc;overflow: hidden;background: #fff;}
-    .wrap .info:nth-child(1) {border: 0;box-shadow: 0px 1px 2px #888;}
-    .info .title {padding: 5px 0 0 10px;height: 30px;background: #eee;border-bottom: 1px solid #ddd;font-size: 18px;font-weight: bold;}
-    .info .close {position: absolute;top: 10px;right: 10px;color: #888;width: 17px;height: 17px;background: url('http://t1.daumcdn.net/localimg/localimages/07/mapapidoc/overlay_close.png');}
-    .info .close:hover {cursor: pointer;}
-    .info .body {position: relative;overflow: hidden;}
-    .info .desc {position: relative;margin: 13px 0 0 90px;height: 75px;}
-    .desc .ellipsis {overflow: hidden;text-overflow: ellipsis;white-space: nowrap;}
-    .desc .jibun {font-size: 11px;color: #888;margin-top: -2px;}
-    .info .img {position: absolute;top: 6px;left: 5px;width: 73px;height: 71px;border: 1px solid #ddd;color: #888;overflow: hidden;}
-    .info:after {content: '';position: absolute;margin-left: -12px;left: 50%;bottom: 0;width: 22px;height: 12px;background: url('http://t1.daumcdn.net/localimg/localimages/07/mapapidoc/vertex_white.png')}
-    .info .link {color: #5085BB;}
-    </style>
+    <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=c74ca833673f22749f45b47c2b30152c"></script>
+    <script src="https://t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js"></script>
 </head>
 <body>
     <div id="notice" style="text-align: center">
@@ -104,8 +84,7 @@
         </table>
     </div>
     
-    <script src="https://t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js"></script>
-    <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=c74ca833673f22749f45b47c2b30152c"></script>
+    
     <script id="tpl_row" data-jui="#table_8" data-tpl="row" type="text/template">
         <tr style="cursor: pointer;">
             <td><!= row.index !></td>
@@ -242,23 +221,23 @@
             center: new kakao.maps.LatLng(33.450701, 126.570667), // 지도의 중심좌표
             level: 3 //지도의 레벨(확대, 축소 정도)
         };
-    
+
         var map = new kakao.maps.Map(container, options); //지도 생성 및 객체 리턴
-        
+
         // 지도 확대 축소를 제어할 수 있는  줌 컨트롤을 생성합니다
         var zoomControl = new kakao.maps.ZoomControl();
         map.addControl(zoomControl, kakao.maps.ControlPosition.RIGHT);
-        
+
         function drawMap(data) {
-        	for (var i = 0; i < data.length; i++) {
-        		const marker = new kakao.maps.Marker({
+            for (var i = 0; i < data.length; i++) {
+                const marker = new kakao.maps.Marker({
                     map: map, // 마커를 표시할 지도
                     position: new kakao.maps.LatLng(data[i].lat, data[i].lng), // 마커를 표시할 위치
                 });
            
-            	let content = getContent(data[i], i);
-            	
-            	const overlay = new kakao.maps.CustomOverlay({
+                let content = getContent(data[i], i);
+                
+                const overlay = new kakao.maps.CustomOverlay({
                     content: content,
                     map: map,
                     position: marker.getPosition()
@@ -269,9 +248,9 @@
                 });
                 
                 overlayArray.push(overlay);
-        	}
+            }
         }
-        
+
         function getContent(data, i) {
             var remain = convertRemain(data.remain_stat);
             
@@ -297,32 +276,32 @@
                 
             return content;
         }
-        
+
         function convertRemain(remainCount) {
-        	var remain = new Map();
+            var remain = new Map();
             if (remainCount == 4) {
-            	remain.set("tag", "<b> <font color='gray'> 판매중지 </font> </b>");
-            	remain.set("src", "images/stop.png");
-        	} else if (remainCount == 3) {
-        		remain.set("tag", "<b> <font color='gray'> 없음  </font> </b>");
+                remain.set("tag", "<b> <font color='gray'> 판매중지 </font> </b>");
+                remain.set("src", "images/stop.png");
+            } else if (remainCount == 3) {
+                remain.set("tag", "<b> <font color='gray'> 없음  </font> </b>");
                 remain.set("src", "images/none.png");
             } else if (remainCount == 2) {
-            	remain.set("tag", "<b> <font color='red'> 부족 (29개 ~ 2개)  </font> </b>");
+                remain.set("tag", "<b> <font color='red'> 부족 (29개 ~ 2개)  </font> </b>");
                 remain.set("src", "images/lack.png");
             } else if (remainCount == 1) {
-            	remain.set("tag", "<b> <font color='#ffcf00'> 보통 (99개 ~ 30개) </font> </b>");
+                remain.set("tag", "<b> <font color='#ffcf00'> 보통 (99개 ~ 30개) </font> </b>");
                 remainCount = "<b> <font color='#ffcf00'> 보통 (99개 ~ 30개) </font> </b>";
             } else if (remainCount == 0) {
-            	remain.set("tag", "<b> <font color='greenyellow'> 충분 (100개 이상) </font> </b>");
+                remain.set("tag", "<b> <font color='greenyellow'> 충분 (100개 이상) </font> </b>");
                 remain.set("src", "images/enough.png");
             }
             
             return remain;
         }
-        
+
         // 커스텀 오버레이를 닫기 위해 호출되는 함수입니다 
         function closeOverlay(i) {
-        	overlayArray[i].setMap(null);
+            overlayArray[i].setMap(null);
         }
     </script>
 </body>
